[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gem-scrapscrap"
version = "1.7.1"
description = "CLI tool to scrape and download contract documents from GeM (Government e-Marketplace)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Wickcore"}
]
keywords = ["gem", "government", "scraping", "contracts", "tenders", "schedule", "cron"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "schedule>=1.2.0",
]

[project.scripts]
gem-scrapscrap = "gem_cli:main"
gem-scrapscrap-schedule = "scheduler:start_scheduler"

[project.urls]
Homepage = "https://github.com/Wickcore/gem-scrapscrap"
Repository = "https://github.com/Wickcore/gem-scrapscrap"
Issues = "https://github.com/Wickcore/gem-scrapscrap/issues"

[tool.setuptools]
py-modules = ["gem_cli", "scheduler"]
